--- a/templates/search.html
+++ b/templates/search.html
@@ -4,6 +4,7 @@
     <head>
         <title>moocha</title>
 
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='reset.css') }}">
 
