--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 {% extends 'result.html' %}
 {% block result %}
-    <main>
-        <h2 class="total error">{{ error }}</h2>
+    <main class="result">
+        <h2 class="error">{{ error }}</h2>
     </main>
 {% endblock %}
