--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Moocha - Search for online courses</title>
+        <title>Moocha - Search engine for online courses</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Search for MOOCs and online courses from platforms including Coursera, edX, MIT OpenCoursWware, Udacity, and Futurelearn.">
+        <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='reset.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
